--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
+
 body{
     margin: 0;
-    padding: 0;
+    padding: 0x;
     }
 
 #main {
@@ -31,7 +32,8 @@ nav ul {
     position: fixed;
     left: 10px;
     right: 10px;
-}
+    z-index: 2;
+    }
 
 nav ul li a {
     display: block;
@@ -57,4 +59,18 @@ nav ul li a:hover {
     padding: 14px 16px;
     text-decoration: none;
     float: left;
+    font-family: 'Raleway', sans-serif;
+}
+
+.projects {
+    height: 350px;
+    width: 400px;
+}
+
+.container {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
 }
