--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway');
+@import url('https://fonts.googleapis.com/css?family=Pacifico|Raleway');
 body {
     background-image: url(http://codinglogics.in/wp-content/uploads/2016/10/portfolio-bg.jpg);
     padding: 0;
@@ -16,19 +16,22 @@ nav ul {
     z-index: 2;
     top: 0;
     margin: 0;
+    height: 45px;
     }
 
 nav ul li a {
-    display: inline-block;
+    display: block;
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
     float: right;
+    border-left: 1px white solid;
 }
 
 nav ul li a:hover {
-    background-color: #111;
+    background-color: white;
+    color: black;
 }
 
 .current {
@@ -52,7 +55,8 @@ nav ul li a:hover {
     padding: 14px 16px;
     text-decoration: none;
     float: left;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Pacifico', cursive;
+    line-height: 1em;
 }
 
 .projects {
@@ -81,8 +85,27 @@ h1 {
     font-family: 'Raleway', sans-serif;
 }
 
+form {
+    align-items: center;
+}
+
 #form-message {
     width: 600px;
     height: 200px;
     margin: 0 auto;
+}
+
+ol {
+       display: inline-block;
+       margin-left: auto;
+       margin-right: auto;
+}
+
+#portrait {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
 }
