--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Pacifico|Raleway|Port+Lligat+Sans');
+html {
+    height: 100%;
+}
 body {
+    height: 100%;
     padding: 0;
     margin: 0;
+    background: linear-gradient(to bottom, rgba(50, 52, 134, 0.7),  rgba(36, 42, 156, 0.9));
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     }
 
 nav ul {
@@ -38,14 +45,12 @@ nav ul li a:hover {
 }
 
 #main {
-    background: linear-gradient(to bottom, rgba(50, 52, 134, 0.7),  rgba(36, 42, 156, 0.9));
     text-align: center;
-    padding: 50px;
-    position: absolute;
+    padding: 50px, 50px, 75px, 50px;
+    position: relative;
     top:0;
     left: 0;
-    bottom: 0;
-    right:0;
+    min-height: 100%;
 }
 .name {
     display: block;
@@ -72,14 +77,16 @@ nav ul li a:hover {
     text-align: center;
     margin-top: 20px;
     font-family: 'Port Lligat Sans', sans-serif;
+    padding-bottom: 75px;
 }
 
 footer {
-    position:absolute;
+    position: absolute;
     text-align: center;
     bottom: 0;
     width: 100%;
     color: white;
+    height: 75px;
 }
 
 .contacts {
@@ -90,6 +97,10 @@ footer {
 
 h1, h3 {
     font-family: 'Raleway', sans-serif;
+}
+
+h1 {
+    padding: 45px;
 }
 
 form input{
@@ -141,3 +152,7 @@ blockquote {
   padding-left: 14px;
   text-align: left;
 } 
+
+a :visited {
+    color: white;
+}
