--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 html {
     height: 100%;
 }
+
 body {
     height: 100%;
     padding: 0;
@@ -116,6 +117,14 @@ form input{
     padding: 5px;
 }
 
+#playground-button {
+    display: block;
+    margin: 5px auto;
+}
+
+#playground-text {
+    margin-top: 50px;
+}
 ol {
        display: inline-block;
        margin-left: auto;
